kustomize/overlays/rancher-desktop/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jenkins-operator-redirect-jenkins-master
  namespace: jenkins
spec:
  redirectScheme:
    scheme: https
    permanent: true
