kustomize/overlays/rancher-desktop/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-operator-https-jenkins-master
  namespace: jenkins
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins-172-24-133-52.traefik.me`)
      kind: Rule
      services:
        - name: jenkins-operator-http-jenkins-master
          port: 8080
  tls:
    secretName: traefik.me-ssl-certs
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-operator-http-jenkins-master
  namespace: jenkins
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins-172-24-133-52.traefik.me`)
      kind: Rule
      services:
        - name: jenkins-operator-http-jenkins-master
          port: 8080
      middlewares:
        - name: jenkins-operator-redirect-jenkins-master
          namespace: jenkins
